Footer added and Readme File

--- a/templates/weather.html
+++ b/templates/weather.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-06I9zcv2X6E5/5g5+BCk/1aI/MInn/1alHUzmFNr3b7cxyG9mMcXEkCExsy2Jl//E+LfYwnyXR07fKVpO/tvqg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <title>Weather App</title>
   </head>
@@ -26,4 +28,14 @@
       </div>
     </div>
   </body>
+  <footer>
+    <p>Made by Yash Triyar with help from ChatGPT</p>
+    <div class="contact-links">
+      <a href="https://www.linkedin.com/in/yash-triyar/" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="https://github.com/yashtriyar" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="mailto:yashtriyar@gmail.com"><i class="far fa-envelope"></i></a>
+    </div>
+    
+  </footer>
+  
 </html>
