--- a/templates/index.html
+++ b/templates/index.html
@@ -55,9 +55,9 @@
 <footer>
     <p>Made by Yash Triyar with help from ChatGPT</p>
     <div class="contact-links">
-      <a href="https://www.linkedin.com/in/yash-triyar/" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="https://github.com/yashtriyar" target="_blank"><i class="fab fa-github"></i></a>
-      <a href="mailto:yashtriyar@gmail.com"><i class="far fa-envelope"></i></a>
+      <a href="https://www.linkedin.com/in/yash-triyar/" target="_blank"><span class="fab fa-linkedin fa-lg"></span></a>
+      <a href="https://github.com/yashtriyar" target="_blank"><span class="fab fa-github fa-lg"></span></a>
+      <a href="mailto:yashtriyar@gmail.com"><span class="far fa-envelope fa-lg"></span></a>
     </div>
     
   </footer>
