--- a/templates/weather.html
+++ b/templates/weather.html
@@ -30,7 +30,7 @@
   </body>
   <footer>
     <p>Made by Yash Triyar with help from ChatGPT</p>
-    <div class="contact-links">
+    <div class="fa-icons">
       <a href="https://www.linkedin.com/in/yash-triyar/" target="_blank"><i class="fab fa-linkedin"></i></a>
       <a href="https://github.com/yashtriyar" target="_blank"><i class="fab fa-github"></i></a>
       <a href="mailto:yashtriyar@gmail.com"><i class="far fa-envelope"></i></a>
