--- a/static/css/style.css
+++ b/static/css/style.css
@@ -136,3 +136,33 @@ button[type="submit"]:hover {
   height: 150px;
   width: 150px;
 }
+footer {
+  background-color: lightpink;
+  color: black;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  text-align: center;
+  padding-top: 20px;
+}
+.fa-icons {
+	position: fixed;
+	top: 10px;
+	right: 10px;
+	display: flex;
+	flex-direction: row;
+}
+
+.fa-icons a {
+	margin-left: 10px;
+}
+
+.fa-icons i {
+	color: #333;
+	transition: color 0.3s ease-in-out;
+}
+
+.fa-icons i:hover {
+	color: #007bff;
+}
